@@ -1,3 +1,9 @@
+Sun, 22 Jul 2007 23:39:50 +0200 <thp@perli.net>
+        * src/gpodder/libipodsync.py: Apply patch from Nick (nikosapi) 
+          to fix an issue with the wrong python-id3 library being used
+          for per-episode cover art
+        * bin/gpodder: We're in development again (svn version)
+
 Sat, 21 Jul 2007 12:31:14 +0200 <thp@perli.net>
         * README: ** gPodder 0.9.4 released **
         * doc/man/gpodder.1: Updated manpage for release
